--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
     "mysql2": "^3.15.3",
     "next": "14.2.14",
